fixed hr too short from 50% to 80% width

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -268,7 +268,7 @@ main {
         padding-right: 0;
     }
     hr {
-        width: 50%;
+        width: 80%;
         margin: 0 auto;
     }
     .news-feed-img {
